--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,13 @@
-<h1>Wilkommen!</h1>
+<div class="parallax-container valign-wrapper">
+    <div style="margin-left: 8%">
+        <%= image_tag 'logo_large.png', style: "height: 150px;" %>
+        <%= link_to "Login or signup with dropbox", dashboard_index_path, class: "waves-effect waves-light btn-large valign" %>
+    </div>
+    <div class="parallax"><%= image_tag 'welcome_bg.jpg' %></div>
+</div>
+<div class="section white">
+    <div class="row container">
+        <h2 class="header">Information</h2>
+        <p class="grey-text text-darken-3 lighten-3">Something goes here</p>
+    </div>
+</div>
