--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,25 +1,19 @@
-<!-- Dropdown Structure -->
-<ul id="dropdown" class="dropdown-content">
-  <li><a href="#!">Account</a></li>
-  <li class="divider"></li>
-  <li><a href="#!">Logout</a></li>
-</ul>
 <nav class="navbar">
     <div class="nav-wrapper">
-        <%= link_to root_path, class: "brand-logo" do  %>
+        <%= link_to dashboard_index_path, class: "brand-logo" do  %>
         <%= image_tag 'logo_small.png', style: "height: 50px; margin-top: 5%; margin-left: 10%;" %>
         <% end %>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul id="nav-large" class="right hide-on-med-and-down">
             <li><a href="dashboard" class="tooltipped" data-position="bottom" data-delay="500" data-tooltip="Dashboard"><i class="material-icons">dashboard</i></a></li>
             <li><a href="#" class="tooltipped" data-position="bottom" data-delay="500" data-tooltip="Settings"><i class="material-icons">settings</i></a></li>
-            <li><a class="dropdown-button" href="#!" data-activates="dropdown"><i class="material-icons">perm_identity arrow_drop_down</i></a></li>
+            <li><a href="/logout" class="tooltipped" data-position="bottom" data-delay="500" data-tooltip="Logout"><i class="material-icons">power_settings_new</i></li>
         </ul>
         <ul id="nav-mobile" class="side-nav">
             <li><a href="#">Dashboard</a></li>
             <li><a href="#">Settings</a></li>
             <li><a href="#">Account</a></li>
-            <li><a href="#">Logout</a></li>
+            <li><%= link_to "Logout", logout_path %></li>
         </ul>
     </div>
 </nav>
