--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <div class="parallax-container valign-wrapper">
-    <div style="margin-left: 8%">
+    <div class="col s12 m6 l3", style="margin-left: 3%">
         <%= image_tag 'logo_large.png', style: "height: 150px;" %>
-        <%= link_to "Login or signup with dropbox", dashboard_index_path, class: "waves-effect waves-light btn-large valign" %>
+        <%= link_to "Login or signup with twitter", login_path, class: "waves-effect waves-light btn-large valign" %>
     </div>
     <div class="parallax"><%= image_tag 'welcome_bg.jpg' %></div>
 </div>
