--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -5,8 +5,8 @@
         <% end %>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul id="nav-large" class="right hide-on-med-and-down">
-            <li><a href="dashboard" class="tooltipped" data-position="bottom" data-delay="500" data-tooltip="Dashboard"><i class="material-icons">dashboard</i></a></li>
-            <li><a href="#" class="tooltipped" data-position="bottom" data-delay="500" data-tooltip="Settings"><i class="material-icons">settings</i></a></li>
+            <li><a href="/dashboard" class="tooltipped" data-position="bottom" data-delay="500" data-tooltip="Dashboard"><i class="material-icons">dashboard</i></a></li>
+            <li><a href="/settings" class="tooltipped" data-position="bottom" data-delay="500" data-tooltip="Settings"><i class="material-icons">settings</i></a></li>
             <li><a href="/logout" class="tooltipped" data-position="bottom" data-delay="500" data-tooltip="Logout"><i class="material-icons">power_settings_new</i></li>
         </ul>
         <ul id="nav-mobile" class="side-nav">
