--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -10,18 +10,17 @@
                             <span class="title black-text"><%= video_feed.location  %></span>
                             <p class="black-text" style="font-size: 80%"><%= video_feed.url  %></p>
                             <p class="secondary-content">
-                                <a class="modal-trigger" href="#modal_<%= video_feed.id %>"><i class="material-icons">mode_edit</i></a></br>
+                                <a class="modal-trigger" href="#video_<%= video_feed.id %>"><i class="material-icons">mode_edit</i></a></br>
                                 <%= link_to video_feed, method: 'DELETE' do  %>
                                     <i class="material-icons">delete</i>
                                 <% end %>
-                                <div id="modal_<%= video_feed.id %>" class="modal black-text">
+                                <div id="video_<%= video_feed.id %>" class="modal black-text">
                                     <%= render partial: 'video_feeds/form', locals: {video_feed: video_feed}  %>
                                 </div>
                             </p>
                         </li>
                     <% end %>
                 </ul>
-
             </div>
             <div class="card-action">
                 <a class="modal-trigger" href="#modalNewFeed">Add New Video Feed</a>
@@ -32,10 +31,27 @@
         <div class="card blue-grey darken-1">
             <div class="card-content white-text">
                 <span class="card-title">Pet Feeders</span>
-                <p>List of users feeders</p>
+                <ul class="collection">
+                    <% current_user.pet_feeders.each do |pet_feeder| %>
+                        <li class="collection-item avatar">
+                            <i class="material-icons circle green">group_work</i>
+                            <span class="title black-text"><%= pet_feeder.name  %></span>
+                            <p class="black-text" style="font-size: 80%"><%= pet_feeder.url  %></p>
+                            <p class="secondary-content">
+                                <a class="modal-trigger" href="#feeder_<%= pet_feeder.id %>"><i class="material-icons">mode_edit</i></a></br>
+                                <%= link_to pet_feeder, method: 'DELETE' do  %>
+                                    <i class="material-icons">delete</i>
+                                <% end %>
+                                <div id="feeder_<%= pet_feeder.id %>" class="modal black-text">
+                                    <%= render partial: 'pet_feeders/form', locals: {pet_feeder: pet_feeder}  %>
+                                </div>
+                            </p>
+                        </li>
+                    <% end %>
+                </ul>
             </div>
             <div class="card-action">
-                <a href="#">Add New Pet Feeder</a>
+                <a class="modal-trigger" href="#modalNewPetFeeder">Add New Pet Feeder</a>
             </div>
         </div>
     </div>
@@ -53,4 +69,7 @@
 </div>
 <div id="modalNewFeed" class="modal">
     <%= render partial: 'video_feeds/form', locals: {video_feed: @video_feed}  %>
+</div>
+<div id="modalNewPetFeeder" class="modal">
+    <%= render partial: 'pet_feeders/form', locals: {pet_feeder: @pet_feeder}  %>
 </div>
