--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,6 +8,7 @@
 <div class="section white">
     <div class="row container">
         <h2 class="header">Information</h2>
-        <p class="grey-text text-darken-3 lighten-3">Something goes here</p>
+        <p class="grey-text text-darken-3 lighten-3">Something goes here
+        </p>
     </div>
 </div>
