--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,3 +40,24 @@
 body.welcome.index .navbar {
     display: none;
 }
+.modal .modal-content-big {
+    padding-top: 24px;
+    padding-right: 24px;
+    padding-bottom: 200px;
+    padding-left: 24px;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    left: 0;
+    right: 0;
+    background-color: #fafafa;
+    padding: 0;
+    max-height: 100%;
+    width: 55%;
+    margin: auto;
+    overflow-y: auto;
+    border-radius: 2px;
+    will-change: top, opacity;
+}
