--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,9 +1,10 @@
 <nav class="navbar">
     <div class="nav-wrapper">
         <%= link_to dashboard_index_path, class: "brand-logo" do  %>
-        <%= image_tag 'logo_small.png', style: "height: 50px; margin-top: 5%; margin-left: 10%;" %>
+            <%= image_tag 'logo_small.png', style: "height: 50px; margin-top: 5%; margin-left: 10%;" %>
         <% end %>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+        <h5 class="center brand-logo"><%= current_user.nest.current_temperature.to_s + '°' if current_user && current_user.nest %></h5>
         <ul id="nav-large" class="right hide-on-med-and-down">
             <li><a href="/dashboard" id="dashboard" class="tooltipped" data-position="bottom" data-delay="500" data-tooltip="Dashboard"><i class="material-icons">dashboard</i></a></li>
             <li><a href="/settings" id="settings" class="tooltipped" data-position="bottom" data-delay="500" data-tooltip="Settings"><i class="material-icons">settings</i></a></li>
