Added javascript to make ajax call to future pet feeder
* returns json data for current time to udpate in the DOM

--- a/app/views/dashboard/_video.html.erb
+++ b/app/views/dashboard/_video.html.erb
@@ -1,8 +1,8 @@
 <li>
-<div class="col s12 m5">
+<div class="col s12 m6">
     <div class="card teal">
         <div class="card-image">
-            <%= image_tag video.url, class: 'responsive-img', style: 'height: 350px' %>
+            <%= image_tag video.url, class: 'responsive-video' %>
         </div>
         <div class="card-content white-text">
             <p><%= video.location  %></p>
