--- a/app/views/pet_feeders/_form.html.erb
+++ b/app/views/pet_feeders/_form.html.erb
@@ -1,9 +1,15 @@
 <div class="modal-content">
     <%= form_for pet_feeder do |f|  %>
         <%= f.label :name  %>
-        <%= f.text_field :name, placeholder: "Feeder 1"  %>
-        <%= f.label :url  %>
-        <%= f.text_field :url, placeholder: "http://your-pet-feeder.com"  %>
+        <%= f.text_field :name, placeholder: "Feeder 1" %>
+        <%= f.label :url %>
+        <%= f.text_field :url, placeholder: "http://your-pet-feeder.com" %>
+        <%= f.label :token  %>
+        <%= f.text_field :token, placeholder: "Security Token for your Feeder App (Optional)" %>
+        <%= f.label :username  %>
+        <%= f.text_field :username, placeholder: "Username for your Feeder App (Optional)"  %>
+        <%= f.label :password  %>
+        <%= f.password_field :password, placeholer: "Password for your Feeder App"  %>
 </div>
 <div class="modal-footer">
     <%= f.submit class: 'btn z-depth-0'%>
