Next Feed time displays on dashboard
* had to migrate the time column from 'time' to 'datetime' to facilitate
  time zone support for displaying and creating feed times while
  maintaining the proper equivalent in UTC stored in the database

--- a/app/views/dashboard/_feeder.html.erb
+++ b/app/views/dashboard/_feeder.html.erb
@@ -1,4 +1,15 @@
-<li>
-    <h5 id="last-feeding"><%= last_feeding(feeder) %></h5>
-    <button id="feed-button" class="btn light-green darken-three waves-effect waves-light" data-id="<%= feeder.id %>">Feed Now</button>
-</li>
+<div class="row">
+    <li>
+        <div class="col s4 center">
+            <h5>Last Fed At:</h5>
+            <h5 id="last-feeding"><%= last_feeding(feeder) %></h5>
+        </div>
+        <div class="col s4 center">
+            <h5>Next Scheduled Feeding:</h5>
+            <h5><%= next_feeding(feeder)  %></h5>
+        </div>
+        <div class="col s4 center">
+            <button id="feed-button" class="btn light-green darken-three waves-effect waves-light" data-id="<%= feeder.id %>">Feed Now</button>
+        </div>
+    </li>
+</div>
