--- a/app/views/dashboard/_feeder.html.erb
+++ b/app/views/dashboard/_feeder.html.erb
@@ -5,7 +5,7 @@
             <h5 id="last-feeding"><%= last_feeding(feeder) %></h5>
         </div>
         <div class="col s4 center">
-            <h5>Today's Next Feeding:</h5>
+            <h5>Next Feeding:</h5>
             <h5><%= next_feeding(feeder)  %></h5>
         </div>
         <div class="col s4 center">
