--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
         <%= csrf_meta_tags %>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
-    <body class="<%= "#{controller.controller_name} #{controller.action_name}" %>">
+    <body class="<%= "#{controller.controller_name} #{controller.action_name} brown lighten-5" %>">
         <%= render 'layouts/nav'  %>
         <%= render 'layouts/messages'  %>
         <%= yield %>
