--- a/app/views/dashboard/_video.html.erb
+++ b/app/views/dashboard/_video.html.erb
@@ -1,6 +1,6 @@
 <li>
 <div class="col s12 m6">
-    <div class="card teal">
+    <div class="card blue-grey darken-1">
         <div class="card-image">
             <%= image_tag video.url, class: 'responsive-video' %>
         </div>
