--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar">
+<nav class="navbar brown">
     <div class="nav-wrapper">
         <%= link_to dashboard_index_path, class: "brand-logo" do  %>
             <%= image_tag 'logo_small.png', style: "height: 50px; margin-top: 5%; margin-left: 10%;" %>
