Fixed logo kerning

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,10 +5,10 @@
     </div>
     <div class="parallax"><%= image_tag 'welcome_bg.jpg' %></div>
 </div>
-<div class="section white">
-    <div class="row container">
-        <h2 class="header">Information</h2>
-        <p class="grey-text text-darken-3 lighten-3">Something goes here
-        </p>
-    </div>
+<!-- <div class="section white">
+<div class="row container">
+<h2 class="header">Information</h2>
+<p class="grey-text text-darken-3 lighten-3">Something goes here
+</p>
 </div>
+</div> -->
