--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,17 @@
 <div class="parallax-container valign-wrapper">
     <div class="col s12 m6 l3", style="margin-left: 3%">
         <%= image_tag 'logo_large.png', style: "height: 150px;" %>
-        <%= link_to "Login or signup with twitter", login_path, class: "brown waves-effect waves-light btn-large valign" %>
+        <div class="input-field">
+            <%= form_for :user, url: login_path do |f| %>
+                <%= f.label :email  %>
+                <%= f.email_field :email  %>
+        </div>
+        <div class="input-field">
+            <%= f.label :password  %>
+            <%= f.password_field :password %>
+        </div>
+        <%= f.submit 'Login or Signup', class: "brown btn" %>
+            <% end %>
     </div>
     <div class="parallax"><%= image_tag 'welcome_bg.jpg' %></div>
 </div>
