--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,6 +40,9 @@
 body.welcome.index .navbar {
     display: none;
 }
+body.sessions.create .navbar {
+    display: none;
+}
 .modal .modal-content-big {
     padding-top: 24px;
     padding-right: 24px;
@@ -60,4 +63,36 @@ body.welcome.index .navbar {
     overflow-y: auto;
     border-radius: 2px;
     will-change: top, opacity;
+}
+
+/* label color */
+.input-field label {
+    color: #ffffff;
+    text-shadow: -1px 1px 4px #616161;
+}
+/* label focus color */
+.input-field input[type=text]:focus + label {
+    color: #ffffff;
+}
+.input-field input {
+    border-bottom: 1px solid white;
+    color: #ffffff;
+    text-shadow: -1px 1px 4px #616161;
+}
+/* label underline focus color */
+.input-field input[type=password]:focus {
+    border-bottom: 1px solid white;
+    box-shadow: 0 1px 0 0 #bdbdbd;
+}
+/* label underline focus color */
+.input-field input[type=email]:focus {
+    border-bottom: 1px solid white;
+    box-shadow: 0 1px 0 0 #bdbdbd;
+}
+/* label underline focus color */
+.select-wrapper input[type=text] {
+    border-bottom: 1px solid white;
+}
+.caret {
+    color: white !important;
 }
